--- a/Website.css
+++ b/Website.css
@@ -1,4 +1,6 @@
-
+*{
+    box-sizing: border-box;
+}
 body {
     margin:0 ;
     background-color: #f5f9fc;
@@ -61,7 +63,7 @@ li a:hover{
     font-size: 17px;
 }
 
-#title{
+#main-title{
     margin: 40px 50px;
     padding: 20px 0 20px 35px;
     background-color: #ffffff;
@@ -70,11 +72,31 @@ li a:hover{
     margin-top: 0;
     margin-left: 50px;
     margin-right: 50px;
-    height: 1000px;
     display: grid;
     grid-template-columns: 32% 32% 32%;
     row-gap: 50px;
     justify-content: space-between;
+}
+.icon {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 30px;
+    color: red;
+    padding: 10px;
+    background-color: #f5f9fc ;
+    border-radius: 10%;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+
+}
+.icon:hover {
+    animation: shake 0.7s ease;
+}
+
+@keyframes shake {
+    25% { transform: scale(1.07) rotate(15deg); }
+    50% { transform: scale(1.07) rotate(-15deg); }
+    75% { transform: scale(1.07) rotate(15deg); }
 }
 .container{
     position: relative;
@@ -96,10 +118,10 @@ li a:hover{
     font-size: 20px;
 }
 .small_text{
-    margin-top:10px;
-    margin-left:10px;
+    margin:10px 0 20px 0;
     overflow: auto;
     opacity: 0.7;
+    padding: 0 10px;
 }
 p{
     margin: 0;
@@ -134,17 +156,77 @@ p{
 .dropdown-container{
     display: none;
 }
+#nav_sub{
+    margin-right: 40px;
+}
+#new-blog-section {
+    display: flex;
+    max-width: 580px;
+    margin: 45px ;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+#create-new-blog{
+    margin: 17px auto;
+    border: #cccccc 1px solid;
+    border-radius: 10px;
+    background-color: green;
+    color: #fff;
+    font-size: 1em;
+    padding: 5px;
+    font-family: 'Arial', sans-serif;
+}
+#create-new-blog:hover{
+    transition: transform 0.3s ease;
+    transform: scale(1.05)
+
+}
+#new-blog-section h2 {
+    font-family: 'Arial', sans-serif;
+    font-size: 24px;
+    color: #333;
+    margin-bottom: 20px;
+    text-align: center;
+}
+#new-blog-form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+#new-blog-form label {
+    font-family: 'Arial', sans-serif;
+    font-size: 20px;
+    color: #333;
+}
+#new-blog-form input, #new-blog-form textarea {
+    padding: 10px;
+    font-size: 18px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    margin: 0;
+}
+
 @media screen and (max-width: 1080px) {
     #over_all{
         grid-template-columns: 48% 48%;
-        height: 1500px;
     }
 }
-@media screen and (max-width: 910px){
+@media screen and (max-width: 950px) {
+    #nav_sub {
+        margin-right: 0;
+    }
+    #div_img {
+        width: 320px;
+        margin-left: 0;
+    }
+}
+@media screen and (max-width: 890px){
     #nav_sub{
         display: none;
     }
-    #title{
+    #main-title{
         margin: 40px 7px;
         padding: 20px 0 20px 35px;
         background-color: #ffffff;
@@ -210,7 +292,6 @@ p{
 @media screen and (max-width: 500px){
     #over_all{
         grid-template-columns: 100%;
-        height: 3000px;
         margin-left: 10px;
         margin-right: 10px;
     }
